security/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: podinfo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-podinfo
  namespace: podinfo
spec:
  podSelector:
    matchLabels:
      app: podinfo
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9898
